--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title:  张雷
 subtitle: 个人站
 description: 欢迎来到我的个人站~
 # 头像里面的标题
-avatarTitle: leopardpan
+avatarTitle: Ray
 # 头像里面的描述
 avatarDesc: Android / 算法
 url: "https://baidu.com"
