--- a/_config.yml
+++ b/_config.yml
@@ -19,13 +19,13 @@ comment:
 
 # Social
 social:
-    weibo: 5366874726
-    github: leopardpan
+    # weibo: 5366874726
+    github: Ray2046
     # zhihu: panpanleopard
     # juejin: xxx
-    jianshu: 2ada30d8d0f7
+    # jianshu: 2ada30d8d0f7
     # twitter:
-    mail: leopardpan@icloud.com
+    mail: 81946524@qq.com
 
 
 # 百度统计
