--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: 欢迎来到我的个人站~
 # 头像里面的标题
 avatarTitle: Ray
 # 头像里面的描述
-avatarDesc: Android / 算法
+avatarDesc: Android / 公考
 url: "https://baidu.com"
 
 # 博客是否自动生成目录，false为不生成
